# react-native-crypto-tools-djinni

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README_RN_LIB.md  RNCryptoTools.podspec  build.sh  index.js  package.json
android/: CMakeLists.txt  build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/java/com/reactlibrary/: RNCryptoToolsModule.java  RNCryptoToolsPackage.java  RNSecp256k1Module.java  Utils.java
android/src/main/java/io/aetheras/djinni/: CryptoCore.java  Greeting.java  GreetingColor.java  GreetingDisplay.java  GreetingService.java  Secp256k1.java
core/: CMakeLists.txt  core.djinni
core/idl/: errors.djinni  greeting.djinni
core/idl/crypto/: hashing.djinni_tmp  secp256k1.djinni
core/lib/: CMakeLists.txt
core/lib/cmake/: ProjectSecp256k1.cmake
core/src/: CMakeLists.txt
core/src/api/: greeting.hpp  greeting_display.hpp  greeting_service.cpp  greeting_service.hpp
core/src/api_impl/: Secp256k1Impl.cpp  Secp256k1Impl.hpp  greetingImpl.cpp  greetingImpl.hpp
core/src/generated_api/: CryptoCore.hpp  Secp256k1.hpp  greeting_color.hpp  greeting_service.cpp  greeting_service.hpp
core/src/generated_jni/jni/: CryptoCore.cpp  CryptoCore.hpp  Secp256k1.cpp  Secp256k1.hpp  greeting.cpp  greeting.hpp  greeting_color.hpp  greeting_display.cpp  greeting_display.hpp  greeting_service.cpp  greeting_service.hpp
core/src/utils/: hex.cpp  hex.hpp
ios/: AIOGreeting+Private.h  AIOGreeting+Private.mm  AIOGreeting.h  AIOGreeting.mm  AIOGreetingColor.h  AIOGreetingDisplay.h  AIOGreetingService+Private.h  AIOGreetingService+Private.mm  RNCryptoTools.h  RNCryptoTools.m
ios/RNCryptoTools.xcodeproj/: project.pbxproj
ios/RNCryptoTools.xcworkspace/: contents.xcworkspacedata
ios/generated_objc/: AIOCryptoCore.h  AIOGreetingService.h  AIOGreetingService.mm  AIOSecp256k1.h
ios/generated_objcpp/: AIOCryptoCore+Private.h  AIOCryptoCore+Private.mm  AIOGreetingDisplay+Private.h  AIOGreetingDisplay+Private.mm  AIOSecp256k1+Private.h  AIOSecp256k1+Private.mm
windows/: RNCryptoTools.sln
windows/RNCryptoTools/: RNCryptoTools.csproj  RNCryptoToolsModule.cs  RNCryptoToolsPackage.cs
windows/RNCryptoTools/Properties/: AssemblyInfo.cs  RNCryptoTools.rd.xml
